Bug 292492 - Default horizontal scroll in plasmoid in 4.8, no option to change it back to vertical scrolling like in <4.7
Summary: Default horizontal scroll in plasmoid in 4.8, no option to change it back to ...
Status: RESOLVED FIXED
Alias: None
Product: kmix
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Esken
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-01-26 18:25 UTC by Luke
Modified: 2012-02-26 17:48 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2012-01-26 18:25:00 UTC
Version:           4 (using Devel) 
OS:                Linux

Virtualbox Archlinux testing setup up-to-date with kde 4.8.0 final.

In 4.8 plasmoid has horizontal scrolling by default, there is no option to change it back to vertical like it was in 4.7.

Reproducible: Always

Steps to Reproduce:
Click on kmix tray icon, horizontal scroll will appear. Slider orientation in Kmix configuration doesn't affect this (I think it should)


Expected Results:  
Be able to change tray slider orientation. It should follow Kmix slider configuration.
Comment 1 bartman2589 2012-01-27 07:06:23 UTC
Confirming this behaviour under Kubuntu 11.10 64 bit (AMD) and also under Kubuntu 11.10 32 bit (x86), really really really annoys me that when I upgraded to KDE 4.8 the system tray volume control changed to horizontal and no matter how many times I try to toggle the slider orientation in Kmix's configuration options it won't go back to the vertical orientation I want it to have!!  Not everyone likes horizontal sliders for their mixer application or system tray volume control!!
Comment 2 bartman2589 2012-01-27 07:08:28 UTC
Confirming this behaviour under Kubuntu 11.10 64 bit (AMD) and also under Kubuntu 11.10 32 bit (x86), really really really annoys me that when I upgraded to KDE 4.8 the system tray volume control changed to horizontal and no matter how many times I try to toggle the slider orientation in Kmix's configuration options it won't go back to the vertical orientation I want it to have!!  Not everyone likes horizontal sliders for their mixer application or system tray volume control!!
Comment 3 Martin Koller 2012-01-29 12:05:55 UTC
Confirming on openSuse 12.1, KDE 4.8.0 and marking as regression
Comment 4 chx1975 2012-02-26 17:33:32 UTC
I see a horizontal popup too while the sliders in the main window is vertical and the Orientation=Vertical in.kde4/share/config/kmixrc
Comment 5 Eike Hein 2012-02-26 17:43:44 UTC
SVN commit 1282386 by hein:

Make the tray popup follow the slider orientation setting.



 M  +1 -0      apps/kmix.h  
 M  +1 -1      gui/viewdockareapopup.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1282386
Comment 6 Eike Hein 2012-02-26 17:48:09 UTC
SVN commit 1282387 by hein:

Make the tray popup follow the slider orientation setting.

Backport from trunk.



 M  +1 -0      apps/kmix.h  
 M  +1 -1      gui/viewdockareapopup.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1282387