Make the tray popup follow the slider orientation setting.

Backport from trunk.

BUG:292492

svn path=/branches/KDE/4.8/kdemultimedia/kmix/; revision=1282387